# poe

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: main.rs
crates/agent-config/: Cargo.toml
crates/agent-config/src/: lib.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: lib.rs
crates/agent-exec/: Cargo.toml
crates/agent-exec/src/: lib.rs
crates/agent-protocol/: Cargo.toml
crates/agent-protocol/src/: lib.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: lib.rs
crates/agent-tui/: Cargo.toml
crates/agent-tui/src/: composer.rs  conversation.rs  custom_terminal.rs  history_insert.rs  lib.rs  resize_reflow.rs
docs/: composer-navigation-plan.md  custom-terminal.md  custom_terminal_plan.md  prompt-caching.md  reference-resize-reflow.md  token-usage-tracking.md  two-regime-viewport.md
