[package]
name = "agent-exec"
version.workspace = true
edition.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
agent-protocol = { path = "../agent-protocol" }
futures-util = "0.3.31"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[dev-dependencies]
futures-executor = "0.3.31"
